--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -90,17 +90,18 @@
 <!ENTITY Ctr_paneluibtweak	"Oranžový panel jako tlačítko...">
 <!ENTITY Ctr_paneluibtweak2	"Oranžový panel jako tlačítko (pouze ikona)...">
 <!ENTITY Ctr_paneluibtweak3	"...na liště s panely">
-<!ENTITY Ctr_appbuttonc_o	"Oranžové tlačítko (výchozí)">
-<!ENTITY Ctr_appbuttonc_a	"Modré tlačítko (Aurora)">
-<!ENTITY Ctr_appbuttonc_n	"Černé tlačítko (Nightly)">
-<!ENTITY Ctr_appbuttonc_t	"Průhledné tlačítko">
-<!ENTITY Ctr_appbuttonc_p	"Modré tlačítko (Palemoon)">
-<!ENTITY Ctr_appbuttonc_r	"Červené tlačítko">
-<!ENTITY Ctr_appbuttonc_g	"Zelené tlačítko">
-<!ENTITY Ctr_appbuttonc_gr	"Šedé tlačítko">
-<!ENTITY Ctr_appbuttonc_pu	"Fialové tlačítko">
-<!ENTITY Ctr_appbuttonc_wh	"Bílé tlačítko">
-<!ENTITY Ctr_appbuttonc_cu	"Zvolit barvu tlačítka">
+<!ENTITY Ctr_appbuttonc		"Tlačítko">
+<!ENTITY Ctr_appbuttonc_o	"Oranžové (výchozí)">
+<!ENTITY Ctr_appbuttonc_a	"Modré (Aurora)">
+<!ENTITY Ctr_appbuttonc_n	"Černé (Nightly)">
+<!ENTITY Ctr_appbuttonc_t	"Průhledné">
+<!ENTITY Ctr_appbuttonc_p	"Modré (Palemoon)">
+<!ENTITY Ctr_appbuttonc_r	"Červené">
+<!ENTITY Ctr_appbuttonc_g	"Zelené">
+<!ENTITY Ctr_appbuttonc_gr	"Šedé">
+<!ENTITY Ctr_appbuttonc_pu	"Fialové">
+<!ENTITY Ctr_appbuttonc_wh	"Bílé">
+<!ENTITY Ctr_appbuttonc_cu	"Zvolit barvu">
 <!ENTITY Ctr_appbuttonct	"Vlastní barva tlačítka a liště">
 <!ENTITY Ctr_appbuttonI1	"Doporučený restart">
 <!ENTITY Ctr_appbuttonI1e	"Není viditelné v záhlaví okna Windows OS, pouze v záhlaví okna &brandShortName;u!">
