--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -90,17 +90,18 @@
 <!ENTITY Ctr_paneluibtweak	"Vis menuknap som &brandShortName;-knap...">
 <!ENTITY Ctr_paneluibtweak2	"Vis menuknap som &brandShortName;-knap (kun ikon)...">
 <!ENTITY Ctr_paneluibtweak3	"...når på fanebladslinje">
-<!ENTITY Ctr_appbuttonc_o	"Orange knap (standard)">
-<!ENTITY Ctr_appbuttonc_a	"Blå knap (Aurora)">
-<!ENTITY Ctr_appbuttonc_n	"Sort knap (Nightly)">
-<!ENTITY Ctr_appbuttonc_t	"Gennemsigtig knap">
-<!ENTITY Ctr_appbuttonc_p	"Blå knap (Palemoon)">
-<!ENTITY Ctr_appbuttonc_r	"Rød knap">
-<!ENTITY Ctr_appbuttonc_g	"Grøn knap">
-<!ENTITY Ctr_appbuttonc_gr	"Grå knap">
-<!ENTITY Ctr_appbuttonc_pu	"Lilla knap">
-<!ENTITY Ctr_appbuttonc_wh	"Hvid knap">
-<!ENTITY Ctr_appbuttonc_cu	"Brugerdefineret knapfarve">
+<!ENTITY Ctr_appbuttonc		"Knapfarve">
+<!ENTITY Ctr_appbuttonc_o	"Orange (standard)">
+<!ENTITY Ctr_appbuttonc_a	"Blå (Aurora)">
+<!ENTITY Ctr_appbuttonc_n	"Sort (Nightly)">
+<!ENTITY Ctr_appbuttonc_t	"Gennemsigtig">
+<!ENTITY Ctr_appbuttonc_p	"Blå (Palemoon)">
+<!ENTITY Ctr_appbuttonc_r	"Rød">
+<!ENTITY Ctr_appbuttonc_g	"Grøn">
+<!ENTITY Ctr_appbuttonc_gr	"Grå">
+<!ENTITY Ctr_appbuttonc_pu	"Lilla">
+<!ENTITY Ctr_appbuttonc_wh	"Hvid">
+<!ENTITY Ctr_appbuttonc_cu	"Brugerdefineret">
 <!ENTITY Ctr_appbuttonct	"Brugerdefineret knapfarve for knap på værktøjslinje">
 <!ENTITY Ctr_appbuttonI1	"Genstart anbefales">
 <!ENTITY Ctr_appbuttonI1e	"Kun synlig på &brandShortName;-titellinjen, ikke Windows OS-titellinjen!">
