--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -90,17 +90,18 @@
 <!ENTITY Ctr_paneluibtweak	"Menüschaltfläche visuell als &brandShortName;-Schaltfläche …">
 <!ENTITY Ctr_paneluibtweak2	"Menüschaltfläche visuell als &brandShortName;-Schaltfläche (nur Symbol) …">
 <!ENTITY Ctr_paneluibtweak3	"… darstellen, wenn sie sich auf der Tableiste befindet.">
-<!ENTITY Ctr_appbuttonc_o	"Orange Schaltflächenfarbe (Standard)">
-<!ENTITY Ctr_appbuttonc_a	"Blaue Schaltflächenfarbe (Aurora)">
-<!ENTITY Ctr_appbuttonc_n	"Schwarze Schaltflächenfarbe (Nightly)">
-<!ENTITY Ctr_appbuttonc_t	"Transparente Schaltfläche">
-<!ENTITY Ctr_appbuttonc_p	"Blaue Schaltflächenfarbe (Palemoon)">
-<!ENTITY Ctr_appbuttonc_r	"Rote Schaltflächenfarbe">
-<!ENTITY Ctr_appbuttonc_g	"Grüne Schaltflächenfarbe">
-<!ENTITY Ctr_appbuttonc_gr	"Graue Schaltflächenfarbe">
-<!ENTITY Ctr_appbuttonc_pu	"Violette Schaltflächenfarbe (Privater Modus)">
-<!ENTITY Ctr_appbuttonc_wh	"Weiße Schaltflächenfarbe">
-<!ENTITY Ctr_appbuttonc_cu	"Eigene Schaltflächenfarbe">
+<!ENTITY Ctr_appbuttonc		"Schaltflächenfarbe">
+<!ENTITY Ctr_appbuttonc_o	"Orange  (Standard)">
+<!ENTITY Ctr_appbuttonc_a	"Blau (Aurora)">
+<!ENTITY Ctr_appbuttonc_n	"Schwarz (Nightly)">
+<!ENTITY Ctr_appbuttonc_t	"Transparent">
+<!ENTITY Ctr_appbuttonc_p	"Blau (Palemoon)">
+<!ENTITY Ctr_appbuttonc_r	"Rot">
+<!ENTITY Ctr_appbuttonc_g	"Grün">
+<!ENTITY Ctr_appbuttonc_gr	"Grau">
+<!ENTITY Ctr_appbuttonc_pu	"Violett (Privater Modus)">
+<!ENTITY Ctr_appbuttonc_wh	"Weiß">
+<!ENTITY Ctr_appbuttonc_cu	"Eigene">
 <!ENTITY Ctr_appbuttonct	"Eigene Farbe für Schaltfläche auf Symbolleisten">
 <!ENTITY Ctr_appbuttonI1	"Nach einer Änderung wird ein Neustart empfohlen.">
 <!ENTITY Ctr_appbuttonI1e	"Die &brandShortName;-Schaltfläche ist auf der Windows-Titelleiste nicht sichtbar!">
