--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -58,7 +58,7 @@
 <!ENTITY Ctr_tabwidthinfo3	"Gódnoty pód 48px zawinuju zwětšego zmólki w pśedstajenju!">
 <!ENTITY Ctr_square_edges	"Kwadratiske górne rožki">
 <!ENTITY Ctr_tttitlebar		"Rejtarkowy titel w titelowej rědce &brandShortName;">
-<!ENTITY Ctr_ttnooverfl		"Remove overflow effect from long tab titles">
+<!ENTITY Ctr_ttnooverfl		"Woběžkowy efekt z dłujkich rejtarkowych titelow wótpóraś">
 <!ENTITY Ctr_tabinsertion	"Pśiswójźbny rejtark za aktualnym rejtarkom zasunuś">
 <!ENTITY Ctr_emptytfavico	"Faworitowy symbol pokazaś (jolic sedło žeden njama)">
 <!ENTITY Ctr_emptytfavico_n	"Žeden">
@@ -90,17 +90,18 @@
 <!ENTITY Ctr_paneluibtweak	"Menijowy tłocašk ako tłocašk &brandShortName; pokazaś,...">
 <!ENTITY Ctr_paneluibtweak2	"Menijowy tłocašk ako tłocašk &brandShortName; pokazaś (jano symbol),...">
 <!ENTITY Ctr_paneluibtweak3	"...gaž jo na rejtarkowej rědce">
-<!ENTITY Ctr_appbuttonc_o	"Tłocaškowa barwa: Oranžowy (standard)">
-<!ENTITY Ctr_appbuttonc_a	"Tłocaškkowa barwa: Módry (Aurora)">
-<!ENTITY Ctr_appbuttonc_n	"Tłocaškowa barwa: Carny (Nightly)">
-<!ENTITY Ctr_appbuttonc_t	"Transparentny tłocašk">
-<!ENTITY Ctr_appbuttonc_p	"Tłocaškowa barwa: Módry (Palemoon)">
-<!ENTITY Ctr_appbuttonc_r	"Tłocaškowa barwa: Cerwjeny">
-<!ENTITY Ctr_appbuttonc_g	"Tłocaškowa barwa: Zeleny">
-<!ENTITY Ctr_appbuttonc_gr	"Tłocaškowa barwa: Šery">
-<!ENTITY Ctr_appbuttonc_pu	"Tłocaškowa barwa: Purpurny">
-<!ENTITY Ctr_appbuttonc_wh	"Tłocaškowa barwa: Běły">
-<!ENTITY Ctr_appbuttonc_cu	"Swójska tłocaškowa barwa">
+<!ENTITY Ctr_appbuttonc		"Tłocaškowa barwa">
+<!ENTITY Ctr_appbuttonc_o	"Oranžowy (standard)">
+<!ENTITY Ctr_appbuttonc_a	"Módry (Aurora)">
+<!ENTITY Ctr_appbuttonc_n	"Carny (Nightly)">
+<!ENTITY Ctr_appbuttonc_t	"Transparentny">
+<!ENTITY Ctr_appbuttonc_p	"Módry (Palemoon)">
+<!ENTITY Ctr_appbuttonc_r	"Cerwjeny">
+<!ENTITY Ctr_appbuttonc_g	"Zeleny">
+<!ENTITY Ctr_appbuttonc_gr	"Šery">
+<!ENTITY Ctr_appbuttonc_pu	"Purpurny">
+<!ENTITY Ctr_appbuttonc_wh	"Běły">
+<!ENTITY Ctr_appbuttonc_cu	"Swójska">
 <!ENTITY Ctr_appbuttonct	"Swójska barwa za tłocašk na symbolowej rědce">
 <!ENTITY Ctr_appbuttonI1	"Nowy start dopórucony">
 <!ENTITY Ctr_appbuttonI1e	"Jano widobny w titelnej rědce &brandShortName;, nic na titelnej rědce źěłowego systema Windows!">
@@ -125,8 +126,8 @@
 <!ENTITY Ctr_altoptionsd	"Standardny wenkowny naglěd">
 <!ENTITY Ctr_altoptionsp	"Alternatiwny wenkowny naglěd">
 <!ENTITY Ctr_altoptionsw	"Bok nastajenjow we woknje wócyniś">
-<!ENTITY Ctr_altoptions_hm	"horizontal menu">
-<!ENTITY Ctr_altoptions_vm	"vertical menu">
+<!ENTITY Ctr_altoptions_hm	"horicontalny meni">
+<!ENTITY Ctr_altoptions_vm	"wertikalny meni">
 <!ENTITY Ctr_altoptionsww	"Šyrokosć">
 <!ENTITY Ctr_altoptionswh	"Wusokosć">
 <!ENTITY Ctr_altoptionsi	"Simulěrowane wokno nastajenjow wěcej njejo dialog, ale 'wobglědowakowe wokno', źož wšykne symbolowe rědki su schowane. Funkcija 'Aktualny bok wužywaś' pśidawa jano URL bokow, kótarež wócynjaju se w aktualnem woknje, kótarež jo w toś tom paźe 'about:preferences'. 'Tłocašk symboloweje rědki Nastajenja' wuměnja se pśez nowy, aby se nastajenja we woknje wócynili.">
@@ -264,7 +265,7 @@
 <!ENTITY Ctr_urlbardropm2	"Tłocašk špica šypki pśecej pokazaś">
 <!ENTITY Ctr_altreaderico	"Alternatiwne 'cytakowe' symbole">
 <!ENTITY Ctr_hideurlzoom	"Skalěrowański tłocašk schowaś (jolic eksistěrujo)">
-<!ENTITY Ctr_urlbardark		"Dark background color">
+<!ENTITY Ctr_urlbardark		"Śamna slězynowa barwa">
 <!ENTITY Ctr_hideprbutton	"Zdźěleński symbol schowaś, gaž wuskokujuce wokno se blokěrujo">
 <!ENTITY Ctr_locsearchbw10	"Wusokosć adresowych a pytańskich pólow reducěrowaś (eksperimentelne)">
 <!ENTITY Ctr_urlbar_ib		"Tłocašk sedłoweje identity">
@@ -385,7 +386,7 @@
 <!ENTITY Ctr_e_readermode	"Cytański modus">
 <!ENTITY Ctr_e_geolocation	"Póstajenje stojnišća">
 <!ENTITY Ctr_e_pocket		"Pocket">
-<!ENTITY Ctr_e_tabsaudioico	"Symbol za awdiowótgrawanje na rejtarkach">
+<!ENTITY Ctr_e_tabsaudioico	"Symbol za awdiowótgrawanje">
 <!ENTITY Ctr_e_containertab	"Kontejnerowe rejtarki">
 <!ENTITY Ctr_e_findbarhl	"Wuzwignjenje pytańskego póla">
 <!ENTITY Ctr_fx50findbarhl	"Gaž se toś te nastajenja znjemóžniju, se 'wuzwignjeńske' funkcije wótpóraju.">
