--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -90,17 +90,18 @@
 <!ENTITY Ctr_paneluibtweak	"Display menu button as &brandShortName; button...">
 <!ENTITY Ctr_paneluibtweak2	"Display menu button as &brandShortName; button (icon only)...">
 <!ENTITY Ctr_paneluibtweak3	"...when on tabs toolbar">
-<!ENTITY Ctr_appbuttonc_o	"Orange button color (default)">
-<!ENTITY Ctr_appbuttonc_a	"Blue button color (Aurora)">
-<!ENTITY Ctr_appbuttonc_n	"Black button color (Nightly)">
-<!ENTITY Ctr_appbuttonc_t	"Transparent button">
-<!ENTITY Ctr_appbuttonc_p	"Blue button color (Palemoon)">
-<!ENTITY Ctr_appbuttonc_r	"Red button color">
-<!ENTITY Ctr_appbuttonc_g	"Green button color">
-<!ENTITY Ctr_appbuttonc_gr	"Gray button color">
-<!ENTITY Ctr_appbuttonc_pu	"Purple button color">
-<!ENTITY Ctr_appbuttonc_wh	"White button color">
-<!ENTITY Ctr_appbuttonc_cu	"Custom button color">
+<!ENTITY Ctr_appbuttonc		"Button color">
+<!ENTITY Ctr_appbuttonc_o	"Orange (default)">
+<!ENTITY Ctr_appbuttonc_a	"Blue (Aurora)">
+<!ENTITY Ctr_appbuttonc_n	"Black (Nightly)">
+<!ENTITY Ctr_appbuttonc_t	"Transparent">
+<!ENTITY Ctr_appbuttonc_p	"Blue (Palemoon)">
+<!ENTITY Ctr_appbuttonc_r	"Red">
+<!ENTITY Ctr_appbuttonc_g	"Green">
+<!ENTITY Ctr_appbuttonc_gr	"Gray">
+<!ENTITY Ctr_appbuttonc_pu	"Purple">
+<!ENTITY Ctr_appbuttonc_wh	"White">
+<!ENTITY Ctr_appbuttonc_cu	"Custom">
 <!ENTITY Ctr_appbuttonct	"Custom button color for button on toolbar">
 <!ENTITY Ctr_appbuttonI1	"Restart recommended">
 <!ENTITY Ctr_appbuttonI1e	"Only visible on &brandShortName; titlebar, not Windows OS titlebar!">
