--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -91,16 +91,17 @@
 <!ENTITY Ctr_paneluibtweak2	"A modo de botón de menú de panel principal para la barra de pestañas (sólo icono)...">
 <!ENTITY Ctr_paneluibtweak3	"... cuando tal botón esté en la barra de pestañas">
 <!ENTITY Ctr_appbuttonc_o	"Color de botón naranja (predeterminado)">
-<!ENTITY Ctr_appbuttonc_a	"Color de botón azul (Aurora)">
-<!ENTITY Ctr_appbuttonc_n	"Color de botón negro (Nightly)">
-<!ENTITY Ctr_appbuttonc_t	"Botón transparente">
-<!ENTITY Ctr_appbuttonc_p	"Color de botón azul (Palemoon)">
-<!ENTITY Ctr_appbuttonc_r	"Color de botón rojo">
-<!ENTITY Ctr_appbuttonc_g	"Color de botón verde">
-<!ENTITY Ctr_appbuttonc_gr	"Color de botón gris">
-<!ENTITY Ctr_appbuttonc_pu	"Color de botón púrpura">
-<!ENTITY Ctr_appbuttonc_wh	"Color de botón blanco">
-<!ENTITY Ctr_appbuttonc_cu	"Color de botón personalizado">
+<!ENTITY Ctr_appbuttonc		"Color de botón">
+<!ENTITY Ctr_appbuttonc_a	"Azul (Aurora)">
+<!ENTITY Ctr_appbuttonc_n	"Negro (Nightly)">
+<!ENTITY Ctr_appbuttonc_t	"Transparente">
+<!ENTITY Ctr_appbuttonc_p	"Azul (Palemoon)">
+<!ENTITY Ctr_appbuttonc_r	"Rojo">
+<!ENTITY Ctr_appbuttonc_g	"Verde">
+<!ENTITY Ctr_appbuttonc_gr	"Gris">
+<!ENTITY Ctr_appbuttonc_pu	"Púrpura">
+<!ENTITY Ctr_appbuttonc_wh	"Blanco">
+<!ENTITY Ctr_appbuttonc_cu	"Personalizado">
 <!ENTITY Ctr_appbuttonct	"Color de botón personalizado para botón en la barra de herramientas">
 <!ENTITY Ctr_appbuttonI1	"Se recomienda reiniciar">
 <!ENTITY Ctr_appbuttonI1e	"¡No es visible en la barra de título de SO de Windows, sólo en la barra de título de &brandShortName;!">
