--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -90,17 +90,18 @@
 <!ENTITY Ctr_paneluibtweak	"Kasuta menüünupu jaoks &brandShortName;i nupu välimust...">
 <!ENTITY Ctr_paneluibtweak2	"Kasuta menüünupu jaoks &brandShortName;i nupu välimust (ainult ikoon)...">
 <!ENTITY Ctr_paneluibtweak3	"...kui see asub kaartide ribal">
-<!ENTITY Ctr_appbuttonc_o	"Oranži värvi nupp (vaikimisi)">
-<!ENTITY Ctr_appbuttonc_a	"Sinist värvi nupp (Aurora)">
-<!ENTITY Ctr_appbuttonc_n	"Musta värvi nupp (Nightly)">
-<!ENTITY Ctr_appbuttonc_t	"Läbipaistev nupp">
-<!ENTITY Ctr_appbuttonc_p	"Sinist värvi nupp (Palemoon)">
-<!ENTITY Ctr_appbuttonc_r	"Punast värvi nupp">
-<!ENTITY Ctr_appbuttonc_g	"Rohelist värvi nupp">
-<!ENTITY Ctr_appbuttonc_gr	"Halli värvi nupp">
-<!ENTITY Ctr_appbuttonc_pu	"Lillat värvi nupp">
-<!ENTITY Ctr_appbuttonc_wh	"Valget värvi nupp">
-<!ENTITY Ctr_appbuttonc_cu	"Kohandatud värvi nupp">
+<!ENTITY Ctr_appbuttonc		"Värvi nupp">
+<!ENTITY Ctr_appbuttonc_o	"Oranži (vaikimisi)">
+<!ENTITY Ctr_appbuttonc_a	"Sinist(Aurora)">
+<!ENTITY Ctr_appbuttonc_n	"Musta (Nightly)">
+<!ENTITY Ctr_appbuttonc_t	"Läbipaistev">
+<!ENTITY Ctr_appbuttonc_p	"Sinist(Palemoon)">
+<!ENTITY Ctr_appbuttonc_r	"Punast">
+<!ENTITY Ctr_appbuttonc_g	"Rohelist">
+<!ENTITY Ctr_appbuttonc_gr	"Halli">
+<!ENTITY Ctr_appbuttonc_pu	"Lillat">
+<!ENTITY Ctr_appbuttonc_wh	"Valget">
+<!ENTITY Ctr_appbuttonc_cu	"Kohandatud">
 <!ENTITY Ctr_appbuttonct	"Kohandatud värvi nupp, kui see asub tööriistaribal">
 <!ENTITY Ctr_appbuttonI1	"Taaskäivitamine soovitatav">
 <!ENTITY Ctr_appbuttonI1e	"Nähtav ainult &brandShortName;i tiitliribal, mitte Windows OS-i tiitliribal!">
