--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -90,17 +90,18 @@
 <!ENTITY Ctr_paneluibtweak	" Donner son apparence au bouton de menu...">
 <!ENTITY Ctr_paneluibtweak2	" Donner son apparence (seulement l'icône) au bouton de menu...">
 <!ENTITY Ctr_paneluibtweak3	"... si ce dernier se trouve sur la barre des onglets">
-<!ENTITY Ctr_appbuttonc_o	"De couleur orange (style par défaut)">
-<!ENTITY Ctr_appbuttonc_a	"De couleur bleue (style Aurora)">
-<!ENTITY Ctr_appbuttonc_n	"De couleur noire (style Nightly)">
+<!ENTITY Ctr_appbuttonc		"De couleur">
+<!ENTITY Ctr_appbuttonc_o	"Orange (style par défaut)">
+<!ENTITY Ctr_appbuttonc_a	"Bleue (style Aurora)">
+<!ENTITY Ctr_appbuttonc_n	"Noire (style Nightly)">
 <!ENTITY Ctr_appbuttonc_t	"Transparent">
-<!ENTITY Ctr_appbuttonc_p	"De couleur bleue (style Palemoon)">
-<!ENTITY Ctr_appbuttonc_r	"De couleur rouge">
-<!ENTITY Ctr_appbuttonc_g	"De couleur verte">
-<!ENTITY Ctr_appbuttonc_gr	"De couleur grise">
-<!ENTITY Ctr_appbuttonc_pu	"De couleur pourpre">
-<!ENTITY Ctr_appbuttonc_wh	"De couleur blanche">
-<!ENTITY Ctr_appbuttonc_cu	"De couleur personnalisée">
+<!ENTITY Ctr_appbuttonc_p	"Bleue (style Palemoon)">
+<!ENTITY Ctr_appbuttonc_r	"Rouge">
+<!ENTITY Ctr_appbuttonc_g	"Verte">
+<!ENTITY Ctr_appbuttonc_gr	"Grise">
+<!ENTITY Ctr_appbuttonc_pu	"Pourpre">
+<!ENTITY Ctr_appbuttonc_wh	"Blanche">
+<!ENTITY Ctr_appbuttonc_cu	"Personnalisée">
 <!ENTITY Ctr_appbuttonct	"Personnaliser la couleur du bouton s'il est sur une barre d'outils">
 <!ENTITY Ctr_appbuttonI1	"Redémarrage recommandé">
 <!ENTITY Ctr_appbuttonI1e	"Uniquement visible sur la barre de titre de &brandShortName;, pas sur la barre de titre de Windows !">
