--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -58,7 +58,7 @@
 <!ENTITY Ctr_tabwidthinfo3	"Hódnoty pod 48px w najwjace padach zwobraznjenske zmylki zawinuja!">
 <!ENTITY Ctr_square_edges	"Kwadratiske hornje róžki">
 <!ENTITY Ctr_tttitlebar		"Rajtarkowy titul w titulne lajsće &brandShortName;">
-<!ENTITY Ctr_ttnooverfl		"Remove overflow effect from long tab titles">
+<!ENTITY Ctr_ttnooverfl		"Přeběžkowy efekt z dołhich rajtarkowych titulow wotstronić">
 <!ENTITY Ctr_tabinsertion	"Přiwuzny rajtark za aktualnym rajtarkom zasadźić">
 <!ENTITY Ctr_emptytfavico	"Faworitowy symbol pokazać (jeli sydło žadyn njepodawa)">
 <!ENTITY Ctr_emptytfavico_n	"Žadyn">
@@ -90,17 +90,18 @@
 <!ENTITY Ctr_paneluibtweak	"Menijowe tłóčatko jako tłóčatko &brandShortName; pokazać,...">
 <!ENTITY Ctr_paneluibtweak2	"Menijowe tłóčatko jako tłóčatko &brandShortName; pokazać (jenož symbol),...">
 <!ENTITY Ctr_paneluibtweak3	"...hdyž je na rajtarkowej lajsće">
-<!ENTITY Ctr_appbuttonc_o	"Tłóčatkowa barba: Oranžowy (standard)">
-<!ENTITY Ctr_appbuttonc_a	"Tłóčatkowa barba: Módry (Aurora)">
-<!ENTITY Ctr_appbuttonc_n	"Tłóčatkowa barba: Čorny (Nightly)">
-<!ENTITY Ctr_appbuttonc_t	"Transparentne tłóčatko">
-<!ENTITY Ctr_appbuttonc_p	"Tłóčatkowa barba: Módry (Palemoon)">
-<!ENTITY Ctr_appbuttonc_r	"Tłóčatkowa barba: Čerwjeny">
-<!ENTITY Ctr_appbuttonc_g	"Tłóčatkowa barba: Zeleny">
-<!ENTITY Ctr_appbuttonc_gr	"Tłóčatkowa barba: Šěry">
-<!ENTITY Ctr_appbuttonc_pu	"Tłóčatkowa barba: Purpur">
-<!ENTITY Ctr_appbuttonc_wh	"Tłóčatkowa barba: Běły">
-<!ENTITY Ctr_appbuttonc_cu	"Swójska tłóčatkowa barba">
+<!ENTITY Ctr_appbuttonc		"Tłóčatkowa barba">
+<!ENTITY Ctr_appbuttonc_o	"Oranžowy (standard)">
+<!ENTITY Ctr_appbuttonc_a	"Módry (Aurora)">
+<!ENTITY Ctr_appbuttonc_n	"Čorny (Nightly)">
+<!ENTITY Ctr_appbuttonc_t	"Transparentne">
+<!ENTITY Ctr_appbuttonc_p	"Módry (Palemoon)">
+<!ENTITY Ctr_appbuttonc_r	"Čerwjeny">
+<!ENTITY Ctr_appbuttonc_g	"Zeleny">
+<!ENTITY Ctr_appbuttonc_gr	"Šěry">
+<!ENTITY Ctr_appbuttonc_pu	"Purpur">
+<!ENTITY Ctr_appbuttonc_wh	"Běły">
+<!ENTITY Ctr_appbuttonc_cu	"Swójska">
 <!ENTITY Ctr_appbuttonct	"Swójska barba za tłóčatko na symbolowej lajsće">
 <!ENTITY Ctr_appbuttonI1	"Nowy start doporučeny">
 <!ENTITY Ctr_appbuttonI1e	"Jenož widźomny w titulnej lajsće &brandShortName;, nic na titulnej lajsće dźěłoweho systema Windows!">
@@ -125,8 +126,8 @@
 <!ENTITY Ctr_altoptionsd	"Standardny zwonkowny napohlad">
 <!ENTITY Ctr_altoptionsp	"Alternatiwny zwonkowny napohlad">
 <!ENTITY Ctr_altoptionsw	"Strona nastajenjow we woknje wočinić">
-<!ENTITY Ctr_altoptions_hm	"horizontal menu">
-<!ENTITY Ctr_altoptions_vm	"vertical menu">
+<!ENTITY Ctr_altoptions_hm	"horicontalny meni">
+<!ENTITY Ctr_altoptions_vm	"wertikalny meni">
 <!ENTITY Ctr_altoptionsww	"Šěrokosć">
 <!ENTITY Ctr_altoptionswh	"Wysokosć">
 <!ENTITY Ctr_altoptionsi	"Simulowane wokno nastajenjow dialog hižo njeje, ale 'wobhladowakowe wokno', hdźež wšě symbolowe lajsty su schowane. Funkcija 'Aktualnu stronu wužiwać' přidawa jenož URL stronow, kotrež so w aktualnym woknje wočinjeja, kotrež je w tutym padźe jenož 'about:preferences'. 'Tłóčatko symboloweje lajsty Nastajenja' so přez nowe wuměnja, zo bychu so nastajenja we woknje wočinili.">
@@ -264,7 +265,7 @@
 <!ENTITY Ctr_urlbardropm2	"Tłóčatko šipkoweho kónčka přeco pokazać">
 <!ENTITY Ctr_altreaderico	"Alternatiwne 'čitakowe' symbole">
 <!ENTITY Ctr_hideurlzoom	"Skalowanske tłóčatko schować (jeli eksistuje)">
-<!ENTITY Ctr_urlbardark		"Dark background color">
+<!ENTITY Ctr_urlbardark		"Ćmowa pozadkowa barba">
 <!ENTITY Ctr_hideprbutton	"Zdźělenski symbol schować, hdyž so wuskakowace wokno blokuje">
 <!ENTITY Ctr_locsearchbw10	"Wysokosć adresowych a pytanskich polow redukować (eksperimentelne)">
 <!ENTITY Ctr_urlbar_ib		"Tłóčatko sydłoweje identity">
@@ -385,7 +386,7 @@
 <!ENTITY Ctr_e_readermode	"Čitanski modus">
 <!ENTITY Ctr_e_geolocation	"Postajenje stejnišća">
 <!ENTITY Ctr_e_pocket		"Pocket">
-<!ENTITY Ctr_e_tabsaudioico	"Symbol za awdiowothrawanje na rajtarkach">
+<!ENTITY Ctr_e_tabsaudioico	"Symbol za awdiowothrawanje">
 <!ENTITY Ctr_e_containertab	"Kontejnerowe rajtarki">
 <!ENTITY Ctr_e_findbarhl	"Wuzběhnjenje pytanskeho pola">
 <!ENTITY Ctr_fx50findbarhl	"Hdyž so tute nastajenja znjemóžnja, so 'wuzběhnjenske' funkcije wotstronja.">
