--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -90,17 +90,18 @@
 <!ENTITY Ctr_paneluibtweak	"Visualizza il pulsante menu come pulsante di &brandShortName;...">
 <!ENTITY Ctr_paneluibtweak2	"Visualizza il pulsante menu come pulsante di &brandShortName; (solo icona)...">
 <!ENTITY Ctr_paneluibtweak3	"...quando è nella barra delle schede">
-<!ENTITY Ctr_appbuttonc_o	"Pulsante arancione (predefinito)">
-<!ENTITY Ctr_appbuttonc_a	"Pulsante blu (Aurora)">
-<!ENTITY Ctr_appbuttonc_n	"Pulsante nero (Nightly)">
-<!ENTITY Ctr_appbuttonc_t	"Pulsante trasparente">
-<!ENTITY Ctr_appbuttonc_p	"Pulsante azzurro (Palemoon)">
-<!ENTITY Ctr_appbuttonc_r	"Pulsante rosso">
-<!ENTITY Ctr_appbuttonc_g	"Pulsante verde">
-<!ENTITY Ctr_appbuttonc_gr	"Pulsante grigio">
-<!ENTITY Ctr_appbuttonc_pu	"Pulsante viola">
-<!ENTITY Ctr_appbuttonc_wh	"Pulsante bianco">
-<!ENTITY Ctr_appbuttonc_cu	"Colore personalizzato">
+<!ENTITY Ctr_appbuttonc		"Pulsante">
+<!ENTITY Ctr_appbuttonc_o	"Arancione (predefinito)">
+<!ENTITY Ctr_appbuttonc_a	"Blu (Aurora)">
+<!ENTITY Ctr_appbuttonc_n	"Nero (Nightly)">
+<!ENTITY Ctr_appbuttonc_t	"Trasparente">
+<!ENTITY Ctr_appbuttonc_p	"Azzurro (Palemoon)">
+<!ENTITY Ctr_appbuttonc_r	"Rosso">
+<!ENTITY Ctr_appbuttonc_g	"Verde">
+<!ENTITY Ctr_appbuttonc_gr	"Grigio">
+<!ENTITY Ctr_appbuttonc_pu	"Viola">
+<!ENTITY Ctr_appbuttonc_wh	"Bianco">
+<!ENTITY Ctr_appbuttonc_cu	"Personalizzato">
 <!ENTITY Ctr_appbuttonct	"Colore personalizzato per il pulsante nella barra degli strumenti">
 <!ENTITY Ctr_appbuttonI1	"Riavvio consigliato">
 <!ENTITY Ctr_appbuttonI1e	"Visibile solo nella barra del titolo di &brandShortName; e non in quella di Windows.">
