--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -90,6 +90,7 @@
 <!ENTITY Ctr_paneluibtweak	"メニューボタンとして &brandShortName; ボタンを表示する…">
 <!ENTITY Ctr_paneluibtweak2	"メニューボタンとして &brandShortName; ボタン (アイコンのみ) を表示する…">
 <!ENTITY Ctr_paneluibtweak3	"…タブバー上にある時のみ">
+<!ENTITY Ctr_appbuttonc		"ションボタン">
 <!ENTITY Ctr_appbuttonc_o	"橙色 (デフォルト)">
 <!ENTITY Ctr_appbuttonc_a	"青色 (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"黒色 (Nightly)">
