--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -90,17 +90,18 @@
 <!ENTITY Ctr_paneluibtweak	"Wyświetl przycisk menu jako przycisk programu &brandShortName;...">
 <!ENTITY Ctr_paneluibtweak2	"Wyświetl przycisk menu jako przycisk programu &brandShortName; (tylko ikona)...">
 <!ENTITY Ctr_paneluibtweak3	"...gdy na pasku kart">
-<!ENTITY Ctr_appbuttonc_o	"Pomarańczowy kolor przycisku (domyślny)">
-<!ENTITY Ctr_appbuttonc_a	"Błękitny kolor przycisku (Aurora)">
-<!ENTITY Ctr_appbuttonc_n	"Czarny kolor przycisku (Nightly)">
-<!ENTITY Ctr_appbuttonc_t	"Przezroczysty przycisk">
-<!ENTITY Ctr_appbuttonc_p	"Błękitny kolor przycisku (Palemoon)">
-<!ENTITY Ctr_appbuttonc_r	"Czerwony kolor przycisku">
-<!ENTITY Ctr_appbuttonc_g	"Zielony kolor przycisku">
-<!ENTITY Ctr_appbuttonc_gr	"Szary kolor przycisku">
-<!ENTITY Ctr_appbuttonc_pu	"Fioletowy kolor przycisku">
-<!ENTITY Ctr_appbuttonc_wh	"Biały kolor przycisku">
-<!ENTITY Ctr_appbuttonc_cu	"Niestandardowy kolor przycisku">
+<!ENTITY Ctr_appbuttonc		"Kolor przycisku">
+<!ENTITY Ctr_appbuttonc_o	"Pomarańczowy (domyślny)">
+<!ENTITY Ctr_appbuttonc_a	"Błękitny(Aurora)">
+<!ENTITY Ctr_appbuttonc_n	"Czarny (Nightly)">
+<!ENTITY Ctr_appbuttonc_t	"Przezroczysty">
+<!ENTITY Ctr_appbuttonc_p	"Błękitny (Palemoon)">
+<!ENTITY Ctr_appbuttonc_r	"Czerwony ">
+<!ENTITY Ctr_appbuttonc_g	"Zielony">
+<!ENTITY Ctr_appbuttonc_gr	"Szary">
+<!ENTITY Ctr_appbuttonc_pu	"Fioletowy">
+<!ENTITY Ctr_appbuttonc_wh	"Biały">
+<!ENTITY Ctr_appbuttonc_cu	"Niestandardowy">
 <!ENTITY Ctr_appbuttonct	"Niestandardowy kolor przycisku dla przycisku na pasku narzędzi">
 <!ENTITY Ctr_appbuttonI1	"Zalecany restart">
 <!ENTITY Ctr_appbuttonI1e	"Tylko widoczny na pasku tytułu programu &brandShortName;, nie na systemowym pasku tytułu!">
@@ -264,7 +265,7 @@
 <!ENTITY Ctr_urlbardropm2	"Ustaw znacznik rozwinięcia jako zawsze widoczny">
 <!ENTITY Ctr_altreaderico	"Alternatywne ikony 'Popraw czytelność'">
 <!ENTITY Ctr_hideurlzoom	"Ukryj przycisk powiększenia (jeżeli obecny)">
-<!ENTITY Ctr_urlbardark		"Dark background color">
+<!ENTITY Ctr_urlbardark		"Ciemny kolor tła">
 <!ENTITY Ctr_hideprbutton	"Ukryj ikonę powiadomienia, gdy wyskakujące okno zostanie zablokowane">
 <!ENTITY Ctr_locsearchbw10	"Zredukuj wysokość paska adresu i wyszukiwania (eksperymentalne)">
 <!ENTITY Ctr_urlbar_ib		"Przycisk tożsamości witryny">
