--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -58,7 +58,7 @@
 <!ENTITY Ctr_tabwidthinfo3	"Значение ниже 48 пикселей в большинстве случаев вызовет сбои!">
 <!ENTITY Ctr_square_edges	"Верхние углы квадратные">
 <!ENTITY Ctr_tttitlebar		"Название вкладки в заголовке &brandShortName;">
-<!ENTITY Ctr_ttnooverfl		"Remove overflow effect from long tab titles">
+<!ENTITY Ctr_ttnooverfl		"Удалить эффект переполнения с длинных заголовков вкладок">
 <!ENTITY Ctr_tabinsertion	"Открывать связанную вкладку после текущей вкладки">
 <!ENTITY Ctr_emptytfavico	"Показывать фавиконку (если отсутствует)">
 <!ENTITY Ctr_emptytfavico_n	"Нет">
@@ -90,17 +90,18 @@
 <!ENTITY Ctr_paneluibtweak	"Вид кнопки меню как у кнопки &brandShortName;…">
 <!ENTITY Ctr_paneluibtweak2	"Вид кнопки меню как у кнопки &brandShortName; (только значок)…">
 <!ENTITY Ctr_paneluibtweak3	"… если расположена на панели вкладок">
-<!ENTITY Ctr_appbuttonc_o	"Оранжевая кнопка (по умолчанию)">
-<!ENTITY Ctr_appbuttonc_a	"Синяя кнопка (Aurora)">
-<!ENTITY Ctr_appbuttonc_n	"Чёрная кнопка (Nightly)">
-<!ENTITY Ctr_appbuttonc_t	"Прозрачная кнопка">
-<!ENTITY Ctr_appbuttonc_p	"Голубая кнопка (Palemoon)">
-<!ENTITY Ctr_appbuttonc_r	"Красная кнопка">
-<!ENTITY Ctr_appbuttonc_g	"Зелёная кнопка">
-<!ENTITY Ctr_appbuttonc_gr	"Серая кнопка">
-<!ENTITY Ctr_appbuttonc_pu	"Фиолетовая кнопка">
-<!ENTITY Ctr_appbuttonc_wh	"Белая кнопка">
-<!ENTITY Ctr_appbuttonc_cu	"Пользовательский цвет кнопки">
+<!ENTITY Ctr_appbuttonc		"Кнопка">
+<!ENTITY Ctr_appbuttonc_o	"Оранжевая (по умолчанию)">
+<!ENTITY Ctr_appbuttonc_a	"Синяя (Aurora)">
+<!ENTITY Ctr_appbuttonc_n	"Чёрная (Nightly)">
+<!ENTITY Ctr_appbuttonc_t	"Прозрачная">
+<!ENTITY Ctr_appbuttonc_p	"Голубая (Palemoon)">
+<!ENTITY Ctr_appbuttonc_r	"Красная">
+<!ENTITY Ctr_appbuttonc_g	"Зелёная">
+<!ENTITY Ctr_appbuttonc_gr	"Серая">
+<!ENTITY Ctr_appbuttonc_pu	"Фиолетовая">
+<!ENTITY Ctr_appbuttonc_wh	"Белая">
+<!ENTITY Ctr_appbuttonc_cu	"Пользовательская">
 <!ENTITY Ctr_appbuttonct	"Пользовательский цвет кнопки на панели инструментов">
 <!ENTITY Ctr_appbuttonI1	"Рекомендуется перезапуск">
 <!ENTITY Ctr_appbuttonI1e	"Кнопка &brandShortName; не отображается в строке заголовка ОС Windows!">
@@ -264,7 +265,7 @@
 <!ENTITY Ctr_urlbardropm2	"Всегда показывать дропмаркер">
 <!ENTITY Ctr_altreaderico	"Альтернативный значок «Чтения»">
 <!ENTITY Ctr_hideurlzoom	"Скрыть кнопки масштабирования (при наличии)">
-<!ENTITY Ctr_urlbardark		"Dark background color">
+<!ENTITY Ctr_urlbardark		"Тёмный цвет фона">
 <!ENTITY Ctr_hideprbutton	"Скрыть значок уведомления, когда блокируется всплывающее окно">
 <!ENTITY Ctr_locsearchbw10	"Уменьшить высоту панелей адреса и поиска (экспериментально)">
 <!ENTITY Ctr_urlbar_ib		"Кнопка подлинности сайта">
