--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -90,17 +90,18 @@
 <!ENTITY Ctr_paneluibtweak	"Оранжева кнопка меню на панелі вкладок">
 <!ENTITY Ctr_paneluibtweak2	"Оранжева кнопка меню на панелі вкладок (тільки іконка)">
 <!ENTITY Ctr_paneluibtweak3	"...коли на панелі вкладок">
-<!ENTITY Ctr_appbuttonc_o	"Оранжева кнопка (типово)">
-<!ENTITY Ctr_appbuttonc_a	"Синя кнопка (Aurora)">
-<!ENTITY Ctr_appbuttonc_n	"Чорна кнопка (Nightly)">
-<!ENTITY Ctr_appbuttonc_t	"Прозора кнопка">
-<!ENTITY Ctr_appbuttonc_p	"Блакитна кнопка (Palemoon)">
-<!ENTITY Ctr_appbuttonc_r	"Червона кнопка">
-<!ENTITY Ctr_appbuttonc_g	"Зелена кнопка">
-<!ENTITY Ctr_appbuttonc_gr	"Сіра кнопка">
-<!ENTITY Ctr_appbuttonc_pu	"Фіолетова кнопка">
-<!ENTITY Ctr_appbuttonc_wh	"Біла кнопка">
-<!ENTITY Ctr_appbuttonc_cu	"Вибрати колір кнопки">
+<!ENTITY Ctr_appbuttonc		"Кнопка">
+<!ENTITY Ctr_appbuttonc_o	"Оранжева (типово)">
+<!ENTITY Ctr_appbuttonc_a	"Синя (Aurora)">
+<!ENTITY Ctr_appbuttonc_n	"Чорна (Nightly)">
+<!ENTITY Ctr_appbuttonc_t	"Прозора">
+<!ENTITY Ctr_appbuttonc_p	"Блакитна (Palemoon)">
+<!ENTITY Ctr_appbuttonc_r	"Червона">
+<!ENTITY Ctr_appbuttonc_g	"Зелена">
+<!ENTITY Ctr_appbuttonc_gr	"Сіра">
+<!ENTITY Ctr_appbuttonc_pu	"Фіолетова">
+<!ENTITY Ctr_appbuttonc_wh	"Біла">
+<!ENTITY Ctr_appbuttonc_cu	"Вибрати колір">
 <!ENTITY Ctr_appbuttonct	"Налаштовуваний колір кнопки на панелі">
 <!ENTITY Ctr_appbuttonI1	"рекомендовано перезапуск">
 <!ENTITY Ctr_appbuttonI1e	"Не видно в рядку заголовку Windows OS, тільки в &brandShortName; заголовку!">
