--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -90,17 +90,18 @@
 <!ENTITY Ctr_paneluibtweak	"在标签页栏上显示橙色面板菜单按钮">
 <!ENTITY Ctr_paneluibtweak2	"在标签页栏上显示橙色面板菜单按钮 (仅图标)">
 <!ENTITY Ctr_paneluibtweak3	" ">
-<!ENTITY Ctr_appbuttonc_o	"橙色按钮 (默认)">
-<!ENTITY Ctr_appbuttonc_a	"蓝色按钮 (Aurora)">
-<!ENTITY Ctr_appbuttonc_n	"黑色按钮 (Nightly)">
-<!ENTITY Ctr_appbuttonc_t	"透明按钮">
-<!ENTITY Ctr_appbuttonc_p	"蓝色按钮 (Palemoon)">
-<!ENTITY Ctr_appbuttonc_r	"红色按钮">
-<!ENTITY Ctr_appbuttonc_g	"绿色按钮">
-<!ENTITY Ctr_appbuttonc_gr	"灰色按钮">
-<!ENTITY Ctr_appbuttonc_pu	"紫色按钮">
-<!ENTITY Ctr_appbuttonc_wh	"白色按钮">
-<!ENTITY Ctr_appbuttonc_cu	"自定义按钮颜色">
+<!ENTITY Ctr_appbuttonc		"钮颜色">
+<!ENTITY Ctr_appbuttonc_o	"橙色 (默认)">
+<!ENTITY Ctr_appbuttonc_a	"蓝色 (Aurora)">
+<!ENTITY Ctr_appbuttonc_n	"黑色 (Nightly)">
+<!ENTITY Ctr_appbuttonc_t	"透明">
+<!ENTITY Ctr_appbuttonc_p	"蓝色 (Palemoon)">
+<!ENTITY Ctr_appbuttonc_r	"红色">
+<!ENTITY Ctr_appbuttonc_g	"绿色">
+<!ENTITY Ctr_appbuttonc_gr	"灰色">
+<!ENTITY Ctr_appbuttonc_pu	"紫色">
+<!ENTITY Ctr_appbuttonc_wh	"白色">
+<!ENTITY Ctr_appbuttonc_cu	"自定">
 <!ENTITY Ctr_appbuttonct	"自定义工具柆上的按钮颜色">
 <!ENTITY Ctr_appbuttonI1	"建议重启浏览器">
 <!ENTITY Ctr_appbuttonI1e	"在 Windows 系统标题栏上不可见，仅在 &brandShortName; 标题栏上!">
