--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -90,17 +90,18 @@
 <!ENTITY Ctr_paneluibtweak	"橘色面板選單按鈕顯示在分頁列">
 <!ENTITY Ctr_paneluibtweak2	"橘色面板選單按鈕顯示在分頁列 (僅圖示)">
 <!ENTITY Ctr_paneluibtweak3	" ">
-<!ENTITY Ctr_appbuttonc_o	"橙色按鈕 (預設值)">
-<!ENTITY Ctr_appbuttonc_a	"藍色按鈕 (Aurora)">
-<!ENTITY Ctr_appbuttonc_n	"黑色按鈕 (Nightly)">
-<!ENTITY Ctr_appbuttonc_t	"透明按鈕">
-<!ENTITY Ctr_appbuttonc_p	"藍色按鈕 (Palemoon)">
-<!ENTITY Ctr_appbuttonc_r	"紅色按鈕">
-<!ENTITY Ctr_appbuttonc_g	"綠色按鈕">
-<!ENTITY Ctr_appbuttonc_gr	"灰色按鈕">
-<!ENTITY Ctr_appbuttonc_pu	"紫色按鈕">
-<!ENTITY Ctr_appbuttonc_wh	"白色按鈕">
-<!ENTITY Ctr_appbuttonc_cu	"自訂按鈕顏色">
+<!ENTITY Ctr_appbuttonc		"按鈕顏色">
+<!ENTITY Ctr_appbuttonc_o	"橙色 (預設值)">
+<!ENTITY Ctr_appbuttonc_a	"藍色 (Aurora)">
+<!ENTITY Ctr_appbuttonc_n	"黑色 (Nightly)">
+<!ENTITY Ctr_appbuttonc_t	"透明">
+<!ENTITY Ctr_appbuttonc_p	"藍色 (Palemoon)">
+<!ENTITY Ctr_appbuttonc_r	"紅色">
+<!ENTITY Ctr_appbuttonc_g	"綠色">
+<!ENTITY Ctr_appbuttonc_gr	"灰色">
+<!ENTITY Ctr_appbuttonc_pu	"紫色">
+<!ENTITY Ctr_appbuttonc_wh	"白色">
+<!ENTITY Ctr_appbuttonc_cu	"自訂">
 <!ENTITY Ctr_appbuttonct	"自訂按鈕顏色〈當其位於工具列時〉">
 <!ENTITY Ctr_appbuttonI1	"建議重啟瀏覽器!">
 <!ENTITY Ctr_appbuttonI1e	"在作業系統標題列上不可見">
