--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -90,17 +90,18 @@
 <!ENTITY Ctr_paneluibtweak	"Oranžni gumb ploščastega menija …">
 <!ENTITY Ctr_paneluibtweak2	"Oranžni gumb ploščastega menija (samo ikona) …">
 <!ENTITY Ctr_paneluibtweak3	"… na orodni vrstici zavihkov">
-<!ENTITY Ctr_appbuttonc_o	"Oranžna barva gumba (privzeto)">
-<!ENTITY Ctr_appbuttonc_a	"Modra barva gumba (Aurora)">
-<!ENTITY Ctr_appbuttonc_n	"Črna barva gumba (Nightly)">
-<!ENTITY Ctr_appbuttonc_t	"Prosojen gumb">
-<!ENTITY Ctr_appbuttonc_p	"Modra barva gumba (Palemoon)">
-<!ENTITY Ctr_appbuttonc_r	"Rdeča barva gumba">
-<!ENTITY Ctr_appbuttonc_g	"Zelena barva gumba">
-<!ENTITY Ctr_appbuttonc_gr	"Siva barva gumba">
-<!ENTITY Ctr_appbuttonc_pu	"Vijolična barva gumba">
-<!ENTITY Ctr_appbuttonc_wh	"Bela barva gumba">
-<!ENTITY Ctr_appbuttonc_cu	"Barva gumba po meri">
+<!ENTITY Ctr_appbuttonc		"Barva gumba">
+<!ENTITY Ctr_appbuttonc_o	"Oranžna (privzeto)">
+<!ENTITY Ctr_appbuttonc_a	"Modra (Aurora)">
+<!ENTITY Ctr_appbuttonc_n	"Črna (Nightly)">
+<!ENTITY Ctr_appbuttonc_t	"Prosojen">
+<!ENTITY Ctr_appbuttonc_p	"Modra (Palemoon)">
+<!ENTITY Ctr_appbuttonc_r	"Rdeča">
+<!ENTITY Ctr_appbuttonc_g	"Zelena">
+<!ENTITY Ctr_appbuttonc_gr	"Siva">
+<!ENTITY Ctr_appbuttonc_pu	"Vijolična">
+<!ENTITY Ctr_appbuttonc_wh	"Bela">
+<!ENTITY Ctr_appbuttonc_cu	"Po meri">
 <!ENTITY Ctr_appbuttonct	"Barva po meri gumba na orodni vrstici">
 <!ENTITY Ctr_appbuttonI1	"Priporočen je ponovni zagon">
 <!ENTITY Ctr_appbuttonI1e	"Ni viden na orodni vrstici OS-a Windows, samo na orodni vrstici &brandShortName;a!">
