Updates to the Slovenian translation

--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -94,7 +94,7 @@
 <!ENTITY Ctr_appbuttonc_o	"Oranžna (privzeto)">
 <!ENTITY Ctr_appbuttonc_a	"Modra (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Črna (Nightly)">
-<!ENTITY Ctr_appbuttonc_t	"Prosojen">
+<!ENTITY Ctr_appbuttonc_t	"Prosojna">
 <!ENTITY Ctr_appbuttonc_p	"Modra (Palemoon)">
 <!ENTITY Ctr_appbuttonc_r	"Rdeča">
 <!ENTITY Ctr_appbuttonc_g	"Zelena">
