--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -58,7 +58,7 @@
 <!ENTITY Ctr_tabwidthinfo3	"48px未満の値は、ほとんどの場合、不具合の原因となります！">
 <!ENTITY Ctr_square_edges	"上部の角を四角くする">
 <!ENTITY Ctr_tttitlebar		"タブタイトルを &brandShortName; タイトルバーに表示する">
-<!ENTITY Ctr_ttnooverfl		"Remove overflow effect from long tab titles">
+<!ENTITY Ctr_ttnooverfl		"R長いタブタイトルの溢れた際の表記（...）を除去">
 <!ENTITY Ctr_tabinsertion	"現在のタブの後ろに関連するタブを開く">
 <!ENTITY Ctr_emptytfavico	"ファビコンの表示（サイトのファビコンが存在しないとき）">
 <!ENTITY Ctr_emptytfavico_n	"なし">
@@ -90,7 +90,7 @@
 <!ENTITY Ctr_paneluibtweak	"メニューボタンとして &brandShortName; ボタンを表示する…">
 <!ENTITY Ctr_paneluibtweak2	"メニューボタンとして &brandShortName; ボタン (アイコンのみ) を表示する…">
 <!ENTITY Ctr_paneluibtweak3	"…タブバー上にある時のみ">
-<!ENTITY Ctr_appbuttonc		"ションボタン">
+<!ENTITY Ctr_appbuttonc		"ボタンの色">
 <!ENTITY Ctr_appbuttonc_o	"橙色 (デフォルト)">
 <!ENTITY Ctr_appbuttonc_a	"青色 (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"黒色 (Nightly)">
@@ -265,7 +265,7 @@
 <!ENTITY Ctr_urlbardropm2	"ドロップマーカーを常に表示する">
 <!ENTITY Ctr_altreaderico	"替わりのリーダーアイコンで置き換える">
 <!ENTITY Ctr_hideurlzoom	"ズームボタンを隠す (表示されている場合)">
-<!ENTITY Ctr_urlbardark		"Dark background color">
+<!ENTITY Ctr_urlbardark		"暗い背景色にする">
 <!ENTITY Ctr_hideprbutton	"ポップアップブロックの通知アイコンを隠す">
 <!ENTITY Ctr_locsearchbw10	"ロケーションバーと検索バーの高さを減らす (実験的)">
 <!ENTITY Ctr_urlbar_ib		"サイト認証ボタン">
